--- a/packages/core/src/sass/time-column.scss
+++ b/packages/core/src/sass/time-column.scss
@@ -47,12 +47,11 @@
   .rbc-event {
     border: 1px solid $event-border;
     display: flex;
-    max-height: 100%;
+    height: 100%;
     min-height: 20px;
     flex-flow: column wrap;
     align-items: flex-start;
     overflow: hidden;
-    position: absolute;
   }
 
   .rbc-event-label {
